# ChangeLog for dev-ruby/rake
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/ChangeLog,v 1.60 2008/04/17 10:53:49 armin76 Exp $

  05 Sep 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
  +rake-0.8.1-r1.ebuild:
  Revision bump for 1.8/1.9 compatibility

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> rake-0.8.1.ebuild:
  ia64 stable wrt #217389

  16 Apr 2008; Tobias Klausmann <klausman@gentoo.org> rake-0.8.1.ebuild:
  Stable on alpha, bug #217389

  13 Apr 2008; Markus Rothe <corsair@gentoo.org> rake-0.8.1.ebuild:
  Stable on ppc64; bug #217389

  12 Apr 2008; Ferris McCormick <fmccor@gentoo.org> rake-0.8.1.ebuild:
  Sparc stable --- Bug #217389 --- Good since the end of January.

  12 Apr 2008; Dawid Węgliński <cla@gentoo.org> rake-0.8.1.ebuild:
  Stable on x86 (bug #217389)

  12 Apr 2008; nixnut <nixnut@gentoo.org> rake-0.8.1.ebuild:
  Stable on ppc wrt bug 217389

  12 Apr 2008; Hans de Graaff <graaff@gentoo.org> rake-0.8.1.ebuild:
  Mark stable on amd64, bug #217389

  08 Apr 2008; Tobias Klausmann <klausman@gentoo.org> rake-0.8.1.ebuild:
  Keyworded on alpha, bug #216480

*rake-0.8.1 (22 Jan 2008)

  22 Jan 2008; Richard Brown <rbrown@gentoo.org> +rake-0.8.1.ebuild:
  Version Bump.

*rake-0.8.0 (11 Jan 2008)

  11 Jan 2008; Richard Brown <rbrown@gentoo.org> +rake-0.8.0.ebuild:
  Version Bump

  13 Oct 2007; Hans de Graaff <graaff@gentoo.org> -rake-0.7.1.ebuild,
  -rake-0.7.2.ebuild:
  Remove old versions

  16 Jun 2007; Christoph Mende <angelos@gentoo.org> rake-0.7.3.ebuild:
  Stable on amd64 wrt bug 181110

  10 Jun 2007; nixnut <nixnut@gentoo.org> rake-0.7.3.ebuild:
  Stable on ppc wrt bug 181110

  09 Jun 2007; Raúl Porcel <armin76@gentoo.org> rake-0.7.3.ebuild:
  ia64/x86 stable wrt #181110

  07 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> rake-0.7.3.ebuild:
  Stable on sparc wrt #181110

  07 Jun 2007; Markus Rothe <corsair@gentoo.org> rake-0.7.3.ebuild: