@@ -1,4 +1,4 @@
 DIST rake-0.8.1.gem 90112 RMD160 fbb00b09f577b71081fe01c7e318e54acaabf37c SHA1 349b0853d5a32012a8f282750c2f1abaf1169213 SHA256 7cd2e89c7736a7829f1fbc2a2ecbd7f911ee68d170ea31ad2b8277b943380227
-EBUILD rake-0.8.1-r1.ebuild 860 RMD160 3d50dbd0ac9ed8e0d819b93968bf8ef12787590b SHA1 85c680aad5dd55955da0d294da8261d0b5e98413 SHA256 f704af65a4aa5ff041830f43e2bcafc6d027c36d6f7593fcef3874f4d4128d5f
-MISC ChangeLog 7359 RMD160 4732c26f32b6df98bd925661615e63da685bd173 SHA1 ad33d8e1d73a8719b57a31f6f6916f12c5ea4a8a SHA256 685343f4cd7684e913c32df6fa3ae3072221cf660eb20bc6ab35e71e27aad7ae
+EBUILD rake-0.8.1-r1.ebuild 907 RMD160 bff3b0d9e1c75f93a0d77e2cda8f75547a0d2a5e SHA1 82aaed3b207cbe603cedd5fa11c7752bdea8191e SHA256 af00e6084a6fdc71859e1ac1dbf27345fef903cace29ac3ab69e8b997dfc4c3c
+MISC ChangeLog 7464 RMD160 f757186deb9f4d1f585fd15fb9a3c9e03acb3610 SHA1 21f1a6b91d588d80818e43a6b5d802739b3e7b3f SHA256 3547bc722eaec1319bc2878b2c06b2f133aaf6a712f819d4e5801a66883e4179
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
