@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/ChangeLog,v 1.60 2008/04/17 10:53:49 armin76 Exp $
 
+  09 Sep 2008; Alex Legler <gentoo@a3li.info> rake-0.8.1-r1.ebuild:
+  Further eselect-ruby improvements
+
   05 Sep 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
   +rake-0.8.1-r1.ebuild:
   Revision bump for 1.8/1.9 compatibility
